--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,15 @@
     "require": {
         "php": ">=5.6",
         "react/socket": "0.4.* | 0.5.*",
-        "cboden/ratchet": "0.3.*",
+        "cboden/ratchet": "0.4.*",
         "ratchet/pawl": "0.2.*",
         "psr/log": "~1",
         "ext-openssl": "*",
-        "voryx/thruway-common": "^1.0"
+        "symfony/event-dispatcher": "2.7 - 3",
+        "voryx/thruway-common": "^1.0",
+        "thruway/ratchet-transport": "dev-master",
+        "thruway/pawl-transport": "dev-master",
+        "thruway/raw-socket-transport": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5.4"
