--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "voryx/thruway",
+    "name": "josegcheca/thruway",
     "type": "library",
     "description": "PHP WAMP2 library",
     "keywords": [
